feat: grid is working now

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,8 @@
-<p>App works!</p>
+<h1>Angular Router App</h1>
+<!-- This nav gives you links to click, which tells the router which route to use (defined in the routes constant in  AppRoutingModule) -->
+<nav>
+  <ul>
+    <li><a routerLink="/dashboard-manager" routerLinkActive="active">Dashboard Manager</a></li>
+  </ul>
+</nav>
 <router-outlet></router-outlet>
