--- a/frontend/src/app/dashboard-manager/dashboard-manager.component.html
+++ b/frontend/src/app/dashboard-manager/dashboard-manager.component.html
@@ -1,1 +1,3 @@
 <p>dashboard-manager works!</p>
+<button (click)="add()">add item</button><button (click)="delete()">remove item</button><button (click)="change()">modify item</button>
+<div class="grid-stack"></div>
